[tool.poetry]
name = "glyph"
version = "0.0.1"
description = "A package manager for Cairo contracts"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
glyph = "glyph.main:app"

[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.4.0"}

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
